# Raw-processing

./: .gitignore  404.html  LICENSE  README.md  ejheo_mammo.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
clinical/lesion-types/: index.html
clinical/views/: index.html
docs/: LUT.md  dataset.md  dukju_baseline.md  dukju_gemma_skin.md  euiju_module_a_analysis.md  euiju_module_b_analysis.md  euiju_module_c_analysis.md  euiju_pipeline_overview.md  examples.md  index.md  references.md
docs/clinical/: lesion-types.md  views.md
docs/d/: DAICOM.md
docs/foundations/: detector.md  mammography.md  system.md  xray-physics.md
docs/image-formation/: characteristic-curves.md  pipeline-overview.md  windowing.md
docs/image-quality/: metrics.md
docs/pipeline/: three-tier.md
docs/preprocessing/: clahe.md  denoising.md  dicom-basics.md  histogram-matching.md  laplacian-pyramid.md  masking.md  pipeline-overview.md  raw-to-dcm.md  windowing.md
docs/quality-metrics/: index.md  iou.md  ms-ssim.md  pixel-error.md  ssim.md  tenengrad.md
docs/techniques/: contrast-enhancement.md  index.md  lut.md  modern-dl.md  multiscale.md  point-operations.md  (+3 more)
dukju_baseline/: index.html
dukju_gemma_skin/: index.html
engine/: main.py  pyproject.toml
engine/processing/: __init__.py  contrast.py  denoising.py  enhancement.py  loaders.py  log_inversion.py  lut.py  morphology.py  normalization.py
examples/: index.html
lut/: index.html
quality-metrics/: index.html
references/: index.html
search/: search_index.json
techniques/: index.html
viewer/: app.py  setup.md
(+31 files in other folders)
