[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raw-engine"
version = "0.1.0"
description = "Mammography RAW image processing engine"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "pydicom",
]

[tool.setuptools]
# processing 패키지 + 파이프라인 진입 모듈(main) 을 설치 대상으로 명시.
# (명시적으로 지정하여 자동 탐색이 노트북 등 비패키지 파일을 건드리지 않게 함)
packages = ["processing"]
py-modules = ["main"]
